teacher/namespace.yaml
# mynamespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: "placeholder"
